feat: add native access arguments for JNA on Java 16+ to suppress warnings